<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="55sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/grey"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@id/process"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonFunc"
            android:text="@string/c"
            android:onClick="clearAll"/>

        <Button
            style="@style/buttonFunc"
            android:text="@string/del"
            android:onClick="delete"/>

        <Button
            style="@style/buttonFunc"
            android:text="@string/percent"
            android:onClick="percent"/>

        <Button
            style="@style/buttonOperator"
            android:text="@string/divide"
            android:onClick="divide"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/_7" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_8" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_9" />

        <Button
            style="@style/buttonOperator"
            android:text="@string/x"
            android:onClick="multiplication"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/_4" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_5" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_6" />

        <Button
            style="@style/buttonOperator"
            android:text="@string/minus"
            android:onClick="minus"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="@string/_1" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_2" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/_3" />

        <Button
            style="@style/buttonOperator"
            android:text="@string/plus"
            android:onClick="plus"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:layout_weight="2"
            android:text="@string/_0" />

        <Button
            style="@style/buttonNumber"
            android:text="@string/dat" />

        <Button
            style="@style/buttonOperator"
            android:text="@string/equal"
            android:onClick="equal"/>
    </LinearLayout>

</LinearLayout>